--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./src/index.css" rel="stylesheet" />
+    <link href="../src/index.css" rel="stylesheet" />
     <title>FoodExpress | amolsasane</title>
   </head>
   <body>
     <div id="root"></div>
 
-    <script type="module" src="./src/App.js"></script>
+    <script type="module" src="../src/App.js"></script>
   </body>
 </html>
